// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Aampe's sendEvent destination action: all fields 1`] = `
Object {
  "contact_id": "t*5dhap2",
  "event_id": "t*5dhap2",
  "event_name": "t*5dhap2",
  "metadata": Object {
    "testType": "t*5dhap2",
  },
  "timestamp": 1696118400,
  "timezone": "t*5dhap2",
}
`;

exports[`Testing snapshot for Aampe's sendEvent destination action: required fields 1`] = `
Object {
  "contact_id": "t*5dhap2",
  "event_id": "t*5dhap2",
  "event_name": "t*5dhap2",
  "timestamp": 1696118400,
}
`;
